--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,12 @@ main{
     font-size: 13px;
     margin: 0;
 }
+
+#information span{
+    background-color: yellow;
+    color:black;
+}
+
+ul{
+    padding-left: 20px;
+}
